restructured portfolio page with cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,118 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style/bootstrap.min.css" />
-    <link rel="stylesheet" href="./style/style.css" />
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Alison Lubar - Portfolio</title>
-  </head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./style/bootstrap.min.css" />
+  <link rel="stylesheet" href="./style/style.css" />
 
-  <body>
-    <nav
-      class="navbar navbar-expand-lg navbar-light"
-      style="background-color: #e3f2fd"
-    >
-      <a class="navbar-brand" href="./index.html">Alison Lubar</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <title>Alison Lubar - Portfolio</title>
+</head>
 
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav ml-auto">
-          <a class="nav-link navRight" href="./contact.html">Contact</a>
-          <a class="nav-link active navRight" href="./portfolio.html"
-            >Portfolio <span class="sr-only">(current)</span></a
-          >
-          <a class="nav-link navRight" href="./index.html">About</a>
-        </div>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd">
+    <a class="navbar-brand" href="./index.html">Alison Lubar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto">
+        <a class="nav-link navRight" href="./contact.html">Contact</a>
+        <a class="nav-link active navRight" href="./portfolio.html">Portfolio <span class="sr-only">(current)</span></a>
+        <a class="nav-link navRight" href="./index.html">About</a>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <main class="container">
-      <section class="row">
-        <div class="jumbotron col-sm-10">
-          <h1 class="display-4">Portfolio</h1>
-          <hr class="my-4" />
-          <div class="row">
-            <div class="col-sm-auto">
-              <img
-                class="portPlaceholder"
-                src="https://via.placeholder.com/350/"
-                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
-              />
-              <img
-                class="portPlaceholder"
-                src="https://via.placeholder.com/350/"
-                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
-              />
+  <main class="container">
+    <section class="row">
+      <div class="jumbotron col-sm-10">
+        <h1 class="display-4">Portfolio</h1>
+        <hr class="my-4" />
+        <!-- <div class="row">
+          <div class="col-sm-auto">portfolio card goes here</div>
+        </div>
+        <div class="row">
+          <div class="col-sm-auto">portfolio card goes here</div>
+        </div>
+        <div class="row">
+          <div class="col-sm-auto">portfolio card goes here</div>
+        </div>
+        <div class="row">
+          <div class="col-sm-auto">portfolio card goes here</div>
+        </div> -->
+        <div class="row row-cols-2 row-cols-md-2">
+          <div class="col mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-header">
+                Featured
+              </div>
+              <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
-            <div class="col-sm-auto">
-              <img
-                class="portPlaceholder"
-                src="https://via.placeholder.com/350/"
-                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
-              />
-              <img
-                class="portPlaceholder"
-                src="https://via.placeholder.com/350/"
-                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
-              />
+          </div>
+          <div class="col mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-header">
+                Featured
+              </div> <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a short card.</p>
+              </div>
             </div>
-            <div class="col-sm-auto">
-              <img
-                class="portPlaceholder"
-                src="https://via.placeholder.com/350/"
-                alt="A grey placeholder box, with a darker grey 350 x 350 designation in the middle. At the bottom of the image, Powered by HTML.COM is in small, grey letters."
-              />
+          </div>
+          <div class="col mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-header">
+                Featured
+              </div> <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="card h-100 text-center">
+              <div class="card-header">
+                Featured
+              </div> <img src="..." class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+              </div>
             </div>
           </div>
         </div>
-      </section>
-    </main>
+    </section>
+  </main>
 
-    <footer class="card" id="footer">
-      <div class="card-body" style="background-color: #e3f2fd">
-        <p>
-          Copyright &#169; 2020 Alison Lubar <br />
-          Background Credit: Felix Mittermeier, Pexels
-        </p>
-      </div>
-    </footer>
+  <footer class="card" id="footer">
+    <div class="card-body" style="background-color: #e3f2fd">
+      <p>
+        Copyright &#169; 2020 Alison Lubar <br />
+        Background Credit: Felix Mittermeier, Pexels
+      </p>
+    </div>
+  </footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
