added project images

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
               personal question... -->
           </p>
         </section>
+        <section>
+          <h2 class="socialMedia">Resume</h2>
+          <p>Resume will go here. Location, & contact information
+          </p>
+        </section>
       </div>
     </div>
   </main>
