--- a/portfolio.html
+++ b/portfolio.html
@@ -35,29 +35,16 @@
       <div class="jumbotron col-sm-10">
         <h1 class="display-4">Portfolio</h1>
         <hr class="my-4" />
-        <!-- <div class="row">
-          <div class="col-sm-auto">portfolio card goes here</div>
-        </div>
-        <div class="row">
-          <div class="col-sm-auto">portfolio card goes here</div>
-        </div>
-        <div class="row">
-          <div class="col-sm-auto">portfolio card goes here</div>
-        </div>
-        <div class="row">
-          <div class="col-sm-auto">portfolio card goes here</div>
-        </div> -->
         <div class="row row-cols-2 row-cols-md-2">
           <div class="col mb-4">
             <div class="card h-100 text-center">
-              <div class="card-header">
-                Featured
+              <div class="card-header portfolio-card">
+                LOOK & LAUGH
               </div>
-              <img src="..." class="card-img-top" alt="...">
+              <img src=" " class="card-img-top" alt="screenshot">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Project Title</h5>
+                <p class="card-text">Link to deployed version </br> Link to GitHub Repository </br> </p>
               </div>
             </div>
           </div>
