added images to portfolio page for look-laugh and weather dashboard

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,27 +41,28 @@
               <div class="card-header portfolio-card">
                 LOOK & LAUGH
               </div>
-              <img src=" " class="card-img-top" alt="screenshot">
+              <img src="./images/project-one-closeup.png" class="card-img-top" alt="screenshot">
               <div class="card-body">
-                <h5 class="card-title">Project Title</h5>
+                <h5 class="card-title">An app for coders & allies who need a break, Look & Laugh provides a giphy image
+                  as well as a joke relevant to a user's search</h5>
                 <p class="card-text">Link to deployed version </br> Link to GitHub Repository </br> </p>
               </div>
             </div>
           </div>
           <div class="col mb-4">
             <div class="card h-100 text-center">
-              <div class="card-header">
-                Featured
-              </div> <img src="..." class="card-img-top" alt="...">
+              <div class="card-header portfolio-card">
+                WEATHER DASHBOARD
+              </div> <img src="./images/weather-dashboard.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a short card.</p>
+                <p class="card-text">Provides current conditions, five-day forecast, and saved cities</p>
               </div>
             </div>
           </div>
           <div class="col mb-4">
             <div class="card h-100 text-center">
-              <div class="card-header">
+              <div class="card-header portfolio-card">
                 Featured
               </div> <img src="..." class="card-img-top" alt="...">
               <div class="card-body">
@@ -73,7 +74,7 @@
           </div>
           <div class="col mb-4">
             <div class="card h-100 text-center">
-              <div class="card-header">
+              <div class="card-header portfolio-card">
                 Featured
               </div> <img src="..." class="card-img-top" alt="...">
               <div class="card-body">
