updated portfolio page content

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,12 @@
               </div>
               <img src="./images/project-one-closeup.png" class="card-img-top" alt="screenshot">
               <div class="card-body">
-                <h5 class="card-title">An app for coders & allies who need a break, Look & Laugh provides a giphy image
-                  as well as a joke relevant to a user's search</h5>
-                <p class="card-text">Link to deployed version </br> Link to GitHub Repository </br> </p>
+                <h5 class="card-title">Coder's Break</h5>
+                <p class="card-text">
+                  Returns a giphy image & joke for a user's searched term (who need a break, Look & Laugh provides a
+                  giphy image
+                  as well as a joke relevant to a user's search)
+                  </br>Link to deployed version </br> Link to GitHub Repository </br> </p>
               </div>
             </div>
           </div>
@@ -55,7 +58,7 @@
                 WEATHER DASHBOARD
               </div> <img src="./images/weather-dashboard.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Forecast for Travelers</h5>
                 <p class="card-text">Provides current conditions, five-day forecast, and saved cities</p>
               </div>
             </div>
@@ -63,24 +66,22 @@
           <div class="col mb-4">
             <div class="card h-100 text-center">
               <div class="card-header portfolio-card">
-                Featured
-              </div> <img src="..." class="card-img-top" alt="...">
+                WORKDAY PLANNER
+              </div> <img src="./images/workday-planner.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content.</p>
+                <h5 class="card-title">Schedule your day</h5>
+                <p class="card-text">Save your to-dos in a timely and hourly-responsive fashion</p>
               </div>
             </div>
           </div>
           <div class="col mb-4">
             <div class="card h-100 text-center">
               <div class="card-header portfolio-card">
-                Featured
-              </div> <img src="..." class="card-img-top" alt="...">
+                THE CODING QUIZ
+              </div> <img src="./images/coding-quiz-screenshot.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title">Test Yourself!</h5>
+                <p class="card-text">Created as a quiz for beginning coders</p>
               </div>
             </div>
           </div>
