added favicon and some content to portfolio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
   <link rel="stylesheet" href="./style/bootstrap.min.css" />
   <link rel="stylesheet" href="./style/style.css" />
-
+  <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
   <title>Alison Lubar - About Me</title>
 </head>
 
@@ -86,7 +86,7 @@
         </section>
         <section>
           <h2 class="socialMedia">Resume</h2>
-          <p>Resume will go here. Location, & contact information
+          <p class="aboutme smLinks">Resume will go here. Location, & contact information
           </p>
         </section>
       </div>
