--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
   <link rel="stylesheet" href="./style/bootstrap.min.css" />
   <link rel="stylesheet" href="./style/style.css" />
-
+  <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
   <title>Alison Lubar - Portfolio</title>
 </head>
 
