fixed portfolio tiling

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,13 +35,13 @@
       <div class="jumbotron col-sm-10">
         <h1 class="display-4">Portfolio</h1>
         <hr class="my-4" />
-        <div class="row row-cols-2 row-cols-md-2">
-          <div class="col mb-4">
+        <div class="row">
+          <div class="mb-4 col-md-6 col-sm-12">
             <div class="card h-100 text-center">
               <div class="card-header portfolio-card">
                 LOOK & LAUGH
               </div>
-              <img src="./images/project-one-closeup.png" class="card-img-top" alt="screenshot">
+              <img src="./images/project-one-closeup.png" class="card-img-top" id="lookLaugh" alt="screenshot">
               <div class="card-body">
                 <h5 class="card-title">Coder's Break</h5>
                 <p class="card-text">
@@ -52,7 +52,7 @@
               </div>
             </div>
           </div>
-          <div class="col mb-4">
+          <div class="mb-4 col-md-6 col-sm-12">
             <div class="card h-100 text-center">
               <div class="card-header portfolio-card">
                 WEATHER DASHBOARD
@@ -63,7 +63,7 @@
               </div>
             </div>
           </div>
-          <div class="col mb-4">
+          <div class="mb-4 col-md-6 col-sm-12">
             <div class="card h-100 text-center">
               <div class="card-header portfolio-card">
                 WORKDAY PLANNER
@@ -74,7 +74,7 @@
               </div>
             </div>
           </div>
-          <div class="col mb-4">
+          <div class="mb-4 col-md-6 col-sm-12">
             <div class="card h-100 text-center">
               <div class="card-header portfolio-card">
                 THE CODING QUIZ
