--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,8 @@
               <div class="card-header portfolio-card">
                 LOOK & LAUGH
               </div>
-              <img src="./images/project-one-closeup.png" class="card-img-top" id="lookLaugh" alt="screenshot">
+              <img src="./images/project-one-closeup.png" class="card-img-top" id="lookLaugh"
+                alt="screenshot of Look & Laugh page: a teal background with search bar for an image or joke, a placeholder image of a winky face sticking its tongue out, and a place to save images & jokes to favorites">
               <div class="card-body">
                 <h5 class="card-title">Coder's Break</h5>
                 <p class="card-text">
@@ -56,7 +57,8 @@
             <div class="card h-100 text-center">
               <div class="card-header portfolio-card">
                 WEATHER DASHBOARD
-              </div> <img src="./images/weather-dashboard.png" class="card-img-top" alt="...">
+              </div> <img src="./images/weather-dashboard.png" class="card-img-top"
+                alt="screenshot of the weather dashboard with searched cities as buttons on the left, the weather for the day at the top of the main section, with a five-day forecast underneath">
               <div class="card-body">
                 <h5 class="card-title">Forecast for Travelers</h5>
                 <p class="card-text">Provides current conditions, five-day forecast, and saved cities</p>
@@ -67,7 +69,8 @@
             <div class="card h-100 text-center">
               <div class="card-header portfolio-card">
                 WORKDAY PLANNER
-              </div> <img src="./images/workday-planner.png" class="card-img-top" alt="...">
+              </div> <img src="./images/workday-planner.png" class="card-img-top"
+                alt="screenshot of the workday planner with times listed on the left, places to enter tasks in the middle, and a blue save button with a disk icon">
               <div class="card-body">
                 <h5 class="card-title">Schedule your day</h5>
                 <p class="card-text">Save your to-dos in a timely and hourly-responsive fashion</p>
@@ -78,7 +81,8 @@
             <div class="card h-100 text-center">
               <div class="card-header portfolio-card">
                 THE CODING QUIZ
-              </div> <img src="./images/coding-quiz-screenshot.png" class="card-img-top" alt="...">
+              </div> <img src="./images/coding-quiz-screenshot.png" class="card-img-top"
+                alt="screenshot of the start page of the coding quiz, with 'Are you ready?' in a white box, with a start button below; the background is a purple and blue colored page of code in terminal">
               <div class="card-body">
                 <h5 class="card-title">Test Yourself!</h5>
                 <p class="card-text">Created as a quiz for beginning coders</p>
