added portfolio links

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,12 +44,13 @@
               <img src="./images/project-one-closeup.png" class="card-img-top" id="lookLaugh"
                 alt="screenshot of Look & Laugh page: a teal background with search bar for an image or joke, a placeholder image of a winky face sticking its tongue out, and a place to save images & jokes to favorites">
               <div class="card-body">
-                <h5 class="card-title">Coder's Break</h5>
+                <h5 class="card-title">Breaks for Coders</h5>
                 <p class="card-text">
-                  Returns a giphy image & joke for a user's searched term (who need a break, Look & Laugh provides a
-                  giphy image
-                  as well as a joke relevant to a user's search)
-                  </br>Link to deployed version </br> Link to GitHub Repository </br> </p>
+                  Returns a giphy image & joke for a user's searched term with an option to save favorites </br>
+                  </br><a href="https://theoriginalison.github.io/look-laugh/" target="_blank">Deployed Site:</br>
+                    https://theoriginalison.github.io/look-laugh/</a></br>
+                  <a href="https://github.com/theoriginalison/look-laugh" target="_blank">GitHub Repo:</br>
+                    https://github.com/theoriginalison/look-laugh</a></br> </p>
               </div>
             </div>
           </div>
@@ -61,7 +62,11 @@
                 alt="screenshot of the weather dashboard with searched cities as buttons on the left, the weather for the day at the top of the main section, with a five-day forecast underneath">
               <div class="card-body">
                 <h5 class="card-title">Forecast for Travelers</h5>
-                <p class="card-text">Provides current conditions, five-day forecast, and saved cities</p>
+                <p class="card-text">Provides current conditions, five-day forecast, and saved cities</br><a
+                    href="https://theoriginalison.github.io/weather-dashboard/" target="_blank">Deployed Site:</br>
+                    https://theoriginalison.github.io/weather-dashboard/</a></br>
+                  <a href="https://github.com/theoriginalison/weather-dashboard" target="_blank">GitHub Repo:</br>
+                    https://github.com/theoriginalison/weather-dashboard</a></br> </p>
               </div>
             </div>
           </div>
@@ -73,7 +78,11 @@
                 alt="screenshot of the workday planner with times listed on the left, places to enter tasks in the middle, and a blue save button with a disk icon">
               <div class="card-body">
                 <h5 class="card-title">Schedule your day</h5>
-                <p class="card-text">Save your to-dos in a timely and hourly-responsive fashion</p>
+                <p class="card-text">Save your to-dos in a timely and hourly-responsive fashion</br><a
+                    href="https://theoriginalison.github.io/workday-planner/" target="_blank">Deployed Site:</br>
+                    https://theoriginalison.github.io/workday-planner/</a></br>
+                  <a href="https://github.com/theoriginalison/workday-planner" target="_blank">GitHub Repo:</br>
+                    https://github.com/theoriginalison/workday-planner</a></br> </p>
               </div>
             </div>
           </div>
@@ -85,7 +94,11 @@
                 alt="screenshot of the start page of the coding quiz, with 'Are you ready?' in a white box, with a start button below; the background is a purple and blue colored page of code in terminal">
               <div class="card-body">
                 <h5 class="card-title">Test Yourself!</h5>
-                <p class="card-text">Created as a quiz for beginning coders</p>
+                <p class="card-text">Created as a quiz for beginning coders</br><a
+                    href="https://theoriginalison.github.io/the-coding-QUIZ/" target="_blank">Deployed
+                    Site:</br>https://theoriginalison.github.io/the-coding-QUIZ/</a></br>
+                  <a href="https://github.com/theoriginalison/the-coding-QUIZ" target="_blank">GitHub Repo:</br>
+                    https://github.com/theoriginalison/the-coding-QUIZ</a></br> </p>
               </div>
             </div>
           </div>
