updated connect portion of profile main page

--- a/index.html
+++ b/index.html
@@ -70,18 +70,17 @@
           <hr class="my-4" />
         </section>
         <section>
-          <h2 class="socialMedia">Social Media</h2>
+          <h2 class="socialMedia">CONNECT</h2>
           <p class="aboutme smLinks">
+            LinkedIn:
+            <a href="https://www.linkedin.com/in/alison-lubar-0210b31b3/"
+              target="_blank">https://www.linkedin.com/in/alison-lubar-0210b31b3/</a><br />
             GitHub:
-            <a href="https://github.com/theoriginalison" target="_blank">theoriginalison</a>
+            <a href="https://github.com/theoriginalison" target="_blank">https://github.com/theoriginalison</a>
             <br />
-            Twitter:
-            <a href="https://twitter.com/theoriginalison?lang=en" target="_blank">@theoriginalison</a><br />
-            Facebook:
-            <a href="https://www.facebook.com/alison.lubar/" target="_blank">Click Here</a>
-            <!-- <br />
-              Instagram: You'll need to email her first. That's a fairly
-              personal question... -->
+
+            Email: <a href="mailto:aslubar@gmail.com">aslubar@gmail.com</a>
+            or <a href="./contact.html">use the form on the contact page</a>.
           </p>
         </section>
         <section>
