--- a/portfolio.html
+++ b/portfolio.html
@@ -62,8 +62,8 @@
                 alt="screenshot of the weather dashboard with searched cities as buttons on the left, the weather for the day at the top of the main section, with a five-day forecast underneath">
               <div class="card-body">
                 <h5 class="card-title">Forecast for Travelers</h5>
-                <p class="card-text">Provides current conditions, five-day forecast, and saved cities</br><a
-                    href="https://theoriginalison.github.io/weather-dashboard/" target="_blank">Deployed Site:</br>
+                <p class="card-text">Provides current conditions, five-day forecast, and saved cities</br></br>
+                  <a href="https://theoriginalison.github.io/weather-dashboard/" target="_blank">Deployed Site:</br>
                     https://theoriginalison.github.io/weather-dashboard/</a></br>
                   <a href="https://github.com/theoriginalison/weather-dashboard" target="_blank">GitHub Repo:</br>
                     https://github.com/theoriginalison/weather-dashboard</a></br> </p>
@@ -78,8 +78,8 @@
                 alt="screenshot of the workday planner with times listed on the left, places to enter tasks in the middle, and a blue save button with a disk icon">
               <div class="card-body">
                 <h5 class="card-title">Schedule your day</h5>
-                <p class="card-text">Save your to-dos in a timely and hourly-responsive fashion</br><a
-                    href="https://theoriginalison.github.io/workday-planner/" target="_blank">Deployed Site:</br>
+                <p class="card-text">Save your to-dos in a timely and hourly-responsive fashion</br></br>
+                  <a href="https://theoriginalison.github.io/workday-planner/" target="_blank">Deployed Site:</br>
                     https://theoriginalison.github.io/workday-planner/</a></br>
                   <a href="https://github.com/theoriginalison/workday-planner" target="_blank">GitHub Repo:</br>
                     https://github.com/theoriginalison/workday-planner</a></br> </p>
@@ -94,8 +94,8 @@
                 alt="screenshot of the start page of the coding quiz, with 'Are you ready?' in a white box, with a start button below; the background is a purple and blue colored page of code in terminal">
               <div class="card-body">
                 <h5 class="card-title">Test Yourself!</h5>
-                <p class="card-text">Created as a quiz for beginning coders</br><a
-                    href="https://theoriginalison.github.io/the-coding-QUIZ/" target="_blank">Deployed
+                <p class="card-text">Created as a quiz for beginning coders</br></br>
+                  <a href="https://theoriginalison.github.io/the-coding-QUIZ/" target="_blank">Deployed
                     Site:</br>https://theoriginalison.github.io/the-coding-QUIZ/</a></br>
                   <a href="https://github.com/theoriginalison/the-coding-QUIZ" target="_blank">GitHub Repo:</br>
                     https://github.com/theoriginalison/the-coding-QUIZ</a></br> </p>
