--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             Journal, Cathexis Northwest Press, High Shelf, Gravitas, great
             weather for MEDIA, Toho, Rowan University’s Glassworks, Giovanni’s
             Room anthology
-            <em>queerbook</em>; she has work forthcoming with Fearsome
-            Critters, Storm of Blue Press, and Apiary Magazine. <br /><br />
+            <em>queerbook</em>, and Fearsome Critters' <em>Quaranzine</em>; she has work forthcoming with Apiary
+            Magazine. <br /><br />
             Alison graduated from the University of Delaware in 2007, with a
             double major in Philosophy and Italian literature. In 2009, while
             teaching at University City High School in West Philadelphia, she
@@ -72,6 +72,7 @@
         <section>
           <h2 class="socialMedia">CONNECT</h2>
           <p class="aboutme smLinks">
+
             LinkedIn:
             <a href="https://www.linkedin.com/in/alison-lubar-0210b31b3/"
               target="_blank">https://www.linkedin.com/in/alison-lubar-0210b31b3/</a><br />
@@ -85,7 +86,10 @@
         </section>
         <section>
           <h2 class="socialMedia">Resume</h2>
-          <p class="aboutme smLinks">Resume will go here. Location, & contact information
+          <p class="aboutme smLinks">
+            Phone: (610) 730-3014 </br>
+            Location: New Jersey & Philadelphia</br>
+            <a href="" download>Click here to download Alison's resume.</a>
           </p>
         </section>
       </div>
