--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <p class="aboutme smLinks">
             Phone: (610) 730-3014 </br>
             Location: New Jersey & Philadelphia</br>
-            <a href="" download>Click here to download Alison's resume.</a>
+            <a href="./Resume.pdf" download>Click here to download Alison's resume.</a>
           </p>
         </section>
       </div>
