added the burgers app to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,6 +102,22 @@
               </div>
             </div>
           </div>
+          <div class="mb-4 col-md-6 col-sm-12">
+            <div class="card h-100 text-center">
+              <div class="card-header portfolio-card">
+                EAT-DA-BURGER
+              </div> <img src="./images/burgers-app.png" class="card-img-top"
+                alt="screenshot of the start page of the coding quiz, with 'Are you ready?' in a white box, with a start button below; the background is a purple and blue colored page of code in terminal">
+              <div class="card-body">
+                <h5 class="card-title">A Responsive Menu</h5>
+                <p class="card-text">View, add, or devour available burgers</br></br>
+                  <a href="https://theoriginalison-burgers-app.herokuapp.com/" target="_blank">Deployed
+                    Site:</br>https://theoriginalison-burgers-app.herokuapp.com/</a></br>
+                  <a href="https://github.com/theoriginalison/burger" target="_blank">GitHub Repo:</br>
+                    https://github.com/theoriginalison/burger</a></br> </p>
+              </div>
+            </div>
+          </div>
         </div>
     </section>
   </main>
