added out-of-office app to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,8 @@
                   </br><a href="https://theoriginalison.github.io/look-laugh/" target="_blank">Deployed Site:</br>
                     https://theoriginalison.github.io/look-laugh/</a></br>
                   <a href="https://github.com/theoriginalison/look-laugh" target="_blank">GitHub Repo:</br>
-                    https://github.com/theoriginalison/look-laugh</a></br> </p>
+                    https://github.com/theoriginalison/look-laugh</a></br>
+                </p>
               </div>
             </div>
           </div>
@@ -66,7 +67,8 @@
                   <a href="https://theoriginalison.github.io/weather-dashboard/" target="_blank">Deployed Site:</br>
                     https://theoriginalison.github.io/weather-dashboard/</a></br>
                   <a href="https://github.com/theoriginalison/weather-dashboard" target="_blank">GitHub Repo:</br>
-                    https://github.com/theoriginalison/weather-dashboard</a></br> </p>
+                    https://github.com/theoriginalison/weather-dashboard</a></br>
+                </p>
               </div>
             </div>
           </div>
@@ -82,7 +84,8 @@
                   <a href="https://theoriginalison.github.io/workday-planner/" target="_blank">Deployed Site:</br>
                     https://theoriginalison.github.io/workday-planner/</a></br>
                   <a href="https://github.com/theoriginalison/workday-planner" target="_blank">GitHub Repo:</br>
-                    https://github.com/theoriginalison/workday-planner</a></br> </p>
+                    https://github.com/theoriginalison/workday-planner</a></br>
+                </p>
               </div>
             </div>
           </div>
@@ -98,7 +101,8 @@
                   <a href="https://theoriginalison.github.io/the-coding-QUIZ/" target="_blank">Deployed
                     Site:</br>https://theoriginalison.github.io/the-coding-QUIZ/</a></br>
                   <a href="https://github.com/theoriginalison/the-coding-QUIZ" target="_blank">GitHub Repo:</br>
-                    https://github.com/theoriginalison/the-coding-QUIZ</a></br> </p>
+                    https://github.com/theoriginalison/the-coding-QUIZ</a></br>
+                </p>
               </div>
             </div>
           </div>
@@ -114,7 +118,25 @@
                   <a href="https://theoriginalison-burgers-app.herokuapp.com/" target="_blank">Deployed
                     Site:</br>https://theoriginalison-burgers-app.herokuapp.com/</a></br>
                   <a href="https://github.com/theoriginalison/burger" target="_blank">GitHub Repo:</br>
-                    https://github.com/theoriginalison/burger</a></br> </p>
+                    https://github.com/theoriginalison/burger</a></br>
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="mb-4 col-md-6 col-sm-12">
+            <div class="card h-100 text-center">
+              <div class="card-header portfolio-card">
+                Out-Of-Office \(OoO)/
+              </div> <img src="./images/ooo-create.png" class="card-img-top"
+                alt="screenshot of the create an event page">
+              <div class="card-body">
+                <h5 class="card-title">Create a Workplace Community</h5>
+                <p class="card-text">Log in, see today's after-work events, join, or create your own!</br></br>
+                  <a href="https://out-of-office1.herokuapp.com/" target="_blank">Deployed
+                    Site:</br>https://out-of-office1.herokuapp.com/</a></br>
+                  <a href="https://github.com/Alexandra-Hionis/Out-Of-Office" target="_blank">GitHub Repo:</br>
+                    https://github.com/Alexandra-Hionis/Out-Of-Office</a></br>
+                </p>
               </div>
             </div>
           </div>
