--- a/portfolio.html
+++ b/portfolio.html
@@ -111,7 +111,7 @@
               <div class="card-header portfolio-card">
                 EAT-DA-BURGER
               </div> <img src="./images/burgers-app.png" class="card-img-top"
-                alt="screenshot of the start page of the coding quiz, with 'Are you ready?' in a white box, with a start button below; the background is a purple and blue colored page of code in terminal">
+                alt="screenshot of the giphy cat chasing a burger, with two lists: burgers available, and burgers devoured">
               <div class="card-body">
                 <h5 class="card-title">A Responsive Menu</h5>
                 <p class="card-text">View, add, or devour available burgers</br></br>
@@ -131,7 +131,7 @@
                 alt="screenshot of the create an event page">
               <div class="card-body">
                 <h5 class="card-title">Create a Workplace Community</h5>
-                <p class="card-text">Log in, see today's after-work events, join, or create your own!</br></br>
+                <p class="card-text">Log in, see today's after-work events, join, or create your own</br></br>
                   <a href="https://out-of-office1.herokuapp.com/" target="_blank">Deployed
                     Site:</br>https://out-of-office1.herokuapp.com/</a></br>
                   <a href="https://github.com/Alexandra-Hionis/Out-Of-Office" target="_blank">GitHub Repo:</br>
