--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
             Journal, Cathexis Northwest Press, High Shelf, Gravitas, great
             weather for MEDIA, Toho, Rowan University’s Glassworks, Giovanni’s
             Room anthology
-            <em>queerbook</em>, and Fearsome Critters' <em>Quaranzine</em>; she has work forthcoming with Apiary
-            Magazine. <br /><br />
+            <em>queerbook</em>, Fearsome Critters' <em>Quaranzine</em>, Apiary Magazine, and antonym lit. <br /><br />
             Alison graduated from the University of Delaware in 2007, with a
             double major in Philosophy and Italian literature. In 2009, while
             teaching at University City High School in West Philadelphia, she
